<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restauration</string>
    <string name="title_section3">Boissons</string>
    <string name="title_section2">Composition</string>
    <string name="title_section1">Accueil</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_section4">Garçon !</string>
    <string name="title_section5">Commande</string>
    <string name="choix_base">Choisissez la base de votre pizza :</string>
    <string name="base_creme">Crème fraîche</string>
    <string name="base_tomate">Sauce tomate</string>
    <string name="choix_garniture">Choisissez votre garniture</string>
    <string name="type_ingredient1">Viandes :</string>
    <string name="type_ingredient2">Légumes :</string>
    <string name="type_ingredient3">Fromages :</string>
    <string name="ingredient1">Jambon</string>
    <string name="ingredient2">Chorizo</string>
    <string name="ingredient3">Poulet</string>
    <string name="ingredient4">Lardons</string>
    <string name="ingredient5">Mozzarella</string>
    <string name="ingredient6">Emmental</string>
    <string name="ingredient7">Chèvre</string>
    <string name="your_cart">Votre commande</string>
    <string name="cart_item">Votre produit</string>
    <string name="delete_item">X</string>
    <string name="confirm_order">Valider la commande</string>
    <string name="modify_item">Modifier</string>
    <string name="pizzas_title">Vos pizzas</string>
    <string name="drink_title">Vos boissons</string>
    <string name="item_description">Tomates, endives, fromages</string>
    <string name="price_item">20 €</string>
    <string name="bill">20 €</string>
    <string name="total">Total : </string>
    <string name="ingredient8">Olives</string>
    <string name="ingredient9">Poivrons</string>
    <string name="ingredient10">Oignons</string>
    <string name="button_eau">Demander de l\'eau</string>
    <string name="button_pain">Demander du pain</string>
    <string name="button_serveur">Appeler le serveur</string>
    <string name="button_toilettes">Toilettes</string>
    <string name="eau_message">Quantité:</string>
    <string name="merci_message">Merci !</string>
    <string name="chronom_message">Temps d\'attente:</string>
    <string name="button_addition">Demander l\'addition</string>
    <string name="button_camera">Voir la cusine</string>
    <string name="serveur_message">Garçon!</string>
    <string name="bienvenue_message">Bienvenue sur votre nouvelle carte intéractive !</string>
    <string name="composition_message">Composez vous-même votre pizza dans l\'onglet Composition !</string>
    <string name="boisson_message">Choisissez votre boisson...</string>
    <string name="panier_message">Accédez à votre panier et valider la commande !</string>
    <string name="garcon_message">Appelez le serveur à tout moment !</string>
    <string name="image_slide1_description">Image pour le slide 1 de l\'accueil</string>
    <string name="bouton_revenir_base">&lt; Changer la base de la pizza</string>
    <string name="bouton_confirmer">Confirmer la pizza &gt;</string>
    <string name="cart_empty_item_text">Vide</string>
    <string name="counter_value">1000000</string>
    <string name="image_chron">Chronometer</string>
    <string name="votre_commande_message">Commande enregistrée!</string>
    <string name="serveur_operation_message">De quoi avez-vous besoin ?</string>
    <string name="euro">€</string>
    <string name="list_boissons">Carte des boissons</string>
    <string name="no_drinks">Vous n\'avez pas commandé de boisson</string>
    <string name="no_pizza">Vous n\'avez pas commandé de pizza</string>
    <string name="commande_is_coming">Votre commande est en train d\'arriver.</string>
    <string name="wait_before_bill">Veuillez attendre votre commande avant de demander l\'addition !</string>
    <string name="water_is_coming">Une carafe d\'eau arrivera bientôt !</string>
    <string name="too_much_water">Vous avez commandé trop d\'eau !</string>
    <string name="want_some_water">Désirez-vous une carafe d\'eau ?</string>
    <string name="yes_i_do">Oui, s\'il vous plait !</string>
    <string name="no_i_dont">Non merci !</string>
    <string name="want_some_bread">Voulez-vous du pain ?</string>
    <string name="bread_is_coming">Une corbeille de pain arrivera bientôt !</string>
    <string name="too_muc_bread">Vous avez commandé trop de pain !</string>
    <string name="garcon_is_coming">Un serveur arrivera bientôt à votre table</string>
    <string name="garcon_is_still_coming">Un serveur est en train d\'arriver à votre table. Veuillez nous excuser pour l\'attente.</string>
    <string name="map_to_toilets">Voici le plan menant aux toilettes.</string>
    <string name="empty_commande">Votre commande est vide !</string>
    <string name="make_da_pizza">Composez votre pizza !</string>
    <string name="boisson_commandee">Vous avez bien commandé un </string>
    <string name="moncuitrose">Moncuit Rosé</string>
    <string name="jlvergnon">Jean Louis Vergnon</string>
    <string name="ruinartrose">Ruinart Rosé</string>
    <string name="kruggrandecuvee">Krug Grande Cuvée Rosé</string>
    <string name="pouillyfume">AOC Pouilly-Fumé</string>
    <string name="rieslinggrandcru">AOC Riesling Grand Cru</string>
    <string name="saumur">AOC Saumur</string>
    <string name="bellet">AOC Bellet</string>
    <string name="cahors">AOC Cahors</string>
    <string name="chateauneufpape">AOC Châteauneuf-du-Pape</string>
    <string name="saumurchampigny">AOC Saumur Champigny</string>
    <string name="saintemilion">AOC Saint-Emilion Grand Cru</string>
    <string name="kirroyal">Kir Royal</string>
    <string name="porto">Porto</string>
    <string name="tipunch">Ti Punch</string>
    <string name="sangria">Sangria</string>
    <string name="leffe">Leffe</string>
    <string name="guinnessambree">Guinness Ambrée</string>
    <string name="delirium">Delirium</string>
    <string name="carlsberg">Carlsberg Elephant</string>
    <string name="cocacola">Coca-Cola</string>
    <string name="icedtea">Iced Tea</string>
    <string name="orange">Jus d\'orange</string>
    <string name="ananas">Jus d\'ananas</string>
    <string name="groupchampagnes">Nos Champagnes</string>
    <string name="groupvinsblancs">Nos Vins Blancs</string>
    <string name="groupvinsrouges">Nos Vins Rouges</string>
    <string name="groupcocktails">Nos Cocktails et Nos Apéritifs</string>
    <string name="groupbieres">Nos Bières</string>
    <string name="groupsofts">Nos Jus et Sodas</string>


</resources>