<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    style="@style/background" >

    <LinearLayout
        android:id="@+id/item_du_panier"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:gravity="center"
    	android:orientation="horizontal" >
    	
    <TextView
        android:id="@+id/cart_text_item"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/cart_item"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        style="@style/redish"
        android:id="@+id/cart_price_item"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/price_item"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_modify_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_item" />
    
    <Button
        android:id="@+id/button_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_item" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:gravity="center"
    	android:orientation="horizontal" >
    	
    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/item_description"/>
    
    </LinearLayout>

</LinearLayout>