<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_cart"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_gravity="center"
	    android:layout_weight="1"
	    android:gravity="center_vertical"
	    android:orientation="vertical" >  
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pizzas_title"
	        android:layout_gravity="center"
	        android:layout_marginBottom="20dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <LinearLayout
	        android:id="@+id/cart_content"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="vertical" >
	    </LinearLayout>
	    
	    <TextView
	        android:layout_marginTop="50dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/drink_title"
	        android:layout_gravity="center"
	        android:layout_marginBottom="20dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <LinearLayout
	        android:id="@+id/drink_content"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="vertical" >
	    </LinearLayout>

    </LinearLayout>
    
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" > 
	    
		<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/total"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		<TextView
	        android:id="@+id/total_cart"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginStart="20dp"
	        android:gravity="center"
	        android:text="@string/bill"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     </LinearLayout>
     
	<Button
	        android:id="@+id/button_confirm_order"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/confirm_order"
	        android:layout_gravity="bottom|end"
	        android:onClick="valider_la_commande" />

</LinearLayout>