<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal" >
    	
    <TextView
        android:id="@+id/cart_text_item"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/cart_item"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        style="@style/redish"
        android:id="@+id/cart_price_item"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/price_item"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        style="@style/button2"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:id="@+id/button_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_item" />

</LinearLayout>