<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center"
    style="@style/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_da_pizza"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        style="@style/red" />
    
    <View
        android:layout_width="wrap_content"
        android:background="@drawable/line_gradient"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"></View>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_gravity="center"
	    android:layout_weight="1"
	    android:gravity="center_vertical"
	    android:orientation="vertical" > 
    
	    <TextView
	        android:id="@+id/textView2"
	        style="@style/green"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:text="@string/choix_base"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="25dp"
	        >
	
	        <Button
	            style="@style/button3"
				android:id="@+id/button_tomate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/base_tomate"
	             />
	
	        <Button
	            style="@style/button3"
	            android:id="@+id/button_creme"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/base_creme"
	    />
	
	    </LinearLayout>
    </LinearLayout>

</LinearLayout>
